colored text overrides

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css overiding/css/style.css">
 	</head>
 	<body>
 		<h1 class="text-xs-center">Hello World</h1>
 
 		<div>
-			<p class="pink-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Equidem e Cn.  </p>
-			<p class="blue-text">Nam de isto magna dissensio est. Non pugnem cum homine, cur tantum habeat in natura boni;</p>
-			<p class="orange-text">Mihi, inquam, qui te id ipsum rogavi? Omnes enim iucundum motum, quo sensus hilaretur. Quos quidem tibi studiose et diligenter tractandos magnopere censeo.</p>
+			<p class="pink-text"> Class overrides body </p>
+			<p class="blue-text" id="yellow">ID overrides class and body</p>
+			<p class="orange-text" style="color: black;" id="red">Style overrides ID, class, body</p>
 		</div>
 
 
