--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<h1 class="text-xs-center">Hello World</h1>
 
-		<div>
+		<div class="container-fluid">
 			<p class="pink-text"> Class overrides body </p>
 			<p class="blue-text" id="yellow">ID overrides class and body</p>
 			<p class="orange-text" style="color: black;" id="red">Style overrides ID, class, body</p>
