--- a/openclass-exs/index.html
+++ b/openclass-exs/index.html
@@ -4,22 +4,21 @@
 
 <head>
     <title> Mingina CV</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
     <header>
-        <p>
-            <h1><strong> Ndundu J</strong></h1>
-            <p><em>Women and cats will do as they please, and men and dogs should relax and get used to the idea</em></p>
+        <p><a href="img/dsc.jpg" title="picture of me looking up at you"><h1 class="heading"><strong> Ndundu J</strong></h1></a></p>
+        
+        <p class="tagline"><em>Women and cats will do as they please, and men and dogs should relax and get used to the idea</em> <br />
+        <img src="img/dsc_tn.jpg" alt="tree thumbnail" class="mypic" title="look at me thumbnail">
         </p>
     </header>
-    <p>
-        <a href="img/dsc.jpg"> <img src="img/dsc_tn.jpg" alt="tree thumbnail" title="picture of me looking up at you"> </a>
-    </p>
     <section>
-        <article>
+        <article class="article-one" id="one">
             <p>
-            <h3><strong>My experience</strong></h3>
+                <h3><strong>My experience</strong></h3>
                 <ul>
                     <li>Worked as a heartbreaker <strong>from 2011</strong></li>
                     <li>Worked as a pirate captain <strong>from 2014</strong></li>
@@ -27,9 +26,9 @@
                 </ul>
             </p>
         </article>
-        <article>
+        <article class="article-one" id="two">
             <p>
-            <h3><strong>My skills</strong></h3>
+                <h3><strong>My skills</strong></h3>
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
@@ -38,13 +37,14 @@
                 </ul>
             </p>
         </article>
-        <article>
+        <article class="article-one" id="three">
             <p>
-            <h3><strong>My education</strong></h3>
+                <h3><strong>My education</strong></h3>
                 <p>Attended the finest private schools <strong><i> Code Academy, OpenClasses</i></strong> and others...</p>
                 <p>Certificate from <a href="img/certificate.png">Open Classrooms</a></p>
         </article>
     </section>
+    <!--footer class="footer"><p> Made with Joy. </p></footer-->
 </body>
 
 </html>
