used maxcdn to host bootstrap without internet will page load col class when i am connected?

--- a/Zozor/index.html
+++ b/Zozor/index.html
@@ -40,16 +40,18 @@
             </article>
             <aside>
                 <h3> About the Author </h3>
+                <img src="style/images/arrow.png" alt="" id="arrow" />
+                    <p id="zozor_picture"><img src="style/images/zozor.png" alt="Zozor Picture" /></p>
                 <p>Let me introduce myself: My name's Zozor. I was born on 23 November 2005.</p>
                 <p>A bit meager, is it not? This is why I've now decided to write my biography to let my readers know who I really am.</p>
             </aside>
         </section>
-        <footer>
-            <div>
+        <footer class="footer">
+            <div class="foot">
                 <h3>My Last Tweet</h3></div>
-            <div>
+            <div class="foot">
                 <h3>My Pictures</h3></div>
-            <div>
+            <div class="foot">
                 <h3>My Friends</h3></div>
         </footer>
     </div>
