--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <header>
             
             <p><h1 class="text-xs-center">Projects</h1></p>
@@ -24,7 +24,7 @@
                 <h3> Intro page</h3>   
                 <p> <a href="#">See it</a> </p>           
             </div>
-            <div id="divtwo" class="col-md-4">
+            <div id="divtwo" class="col-md-2">
                 <h3> Open Class exercises </h3>
                 <p> <a href="openclass-exs">See it</a> </p> 
             </div>
@@ -33,7 +33,7 @@
                 <h3> Zozor</h3>
                 <p><a href="Zozor">See it</a> </p> 
             </div>
-            <div id="divfour" class="col-md-2">
+            <div id="divfour" class="col-md-4">
                 <h3>Create</h3>
                 <p> <a href="#">See it</a> </p> 
             </div>
