completed Zozor, it's not perfect but it's finished

--- a/Zozor/index.html
+++ b/Zozor/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <!--[if lt IE 9]>
+        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
     <title>Zozor</title>
 </head>
 <link rel="stylesheet" type="text/css" href="style/style.css">
@@ -34,25 +37,47 @@
         <section>
             <article>
                 <h3> <img src="style/images/pin.png" alt="Travel category" class="ico_categorie" />The Great Traveller</h3>
-                <p>Lorem ipsum dolor sit amet...</p>
-                <p>Vivamus sed libero nec mauris pulvinar facilisis ut non sem...</p>
-                <p>Phasellus ligula massa, congue ac vulputate non, dignissim at augue...</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Vivamus sed libero nec mauris pulvinar facilisis ut non sem...Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, neque dolorum sed. Hic quis, cumque in dicta omnis nam neque, commodi harum odit nesciunt voluptatum repellendus consequuntur accusamus doloremque incidunt!Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </article>
             <aside>
                 <h3> About the Author </h3>
                 <img src="style/images/arrow.png" alt="" id="arrow" />
-                    <p id="zozor_picture"><img src="style/images/zozor.png" alt="Zozor Picture" /></p>
+                <p id="zozor_picture"><img src="style/images/zozor.png" alt="Zozor Picture" /></p>
                 <p>Let me introduce myself: My name's Zozor. I was born on 23 November 2005.</p>
                 <p>A bit meager, is it not? This is why I've now decided to write my biography to let my readers know who I really am.</p>
+                <p><img src="style/images/facebook.png" alt="Facebook" /><img src="style/images/twitter.png" alt="Twitter" /><img src="style/images/vimeo.png" alt="Vimeo" /><img src="style/images/flickr.png" alt="Flickr" /><img src="style/images/rss.png" alt="RSS" /></p>
             </aside>
         </section>
         <footer class="footer">
-            <div class="foot">
-                <h3>My Last Tweet</h3></div>
-            <div class="foot">
-                <h3>My Pictures</h3></div>
-            <div class="foot">
-                <h3>My Friends</h3></div>
+            <div id="tweet">
+                <h3>My Last Tweet</h3>
+                <p>Hee-haaww</p>
+                <p> 10/5 14:48</p>
+            </div>
+            <div id="pics">
+                <h3>My Pictures</h3>
+                <img src="style/images/pic1.jpg">
+                <img src="style/images/pic2.jpg">
+                <img src="style/images/pic3.jpg">
+                <img src="style/images/pic4.jpg">
+            </div>
+            <div id="friends">
+                <h3>My Friends</h3>
+                <ul>
+                    <li><a href="#">Pupi the rabbit</a></li>
+                    <li><a href="#">Mr Baobab</a></li>
+                    <li><a href="#">Kaiwaii</a></li>
+                    <li><a href="#">Perceval.eu</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Ji</a></li>
+                    <li><a href="#">Super cucumber</a></li>
+                    <li><a href="#">Prince</a></li>
+                    <li><a href="#"> Mr Fan</a></li>
+                </ul>
+            </div>
         </footer>
     </div>
 </body>
