--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                 <h3>GBWorld</h3>
                 <p> <a href="GBWorld">See it</a> </p>
             </div>
+            <div id="divsix" class="col-md-4 projdiv">
+                <h3>CSS ZenGarden</h3>
+                <p> <a href="csszengarden">See it</a> </p>
+            </div>
             <!--/div projects-->
         </div>
     </div>
