moving to opclass-style

--- a/Zozor/index.html
+++ b/Zozor/index.html
@@ -5,19 +5,18 @@
     <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
+    <meta charset="utf-8">
     <title>Zozor</title>
+    <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
-<link rel="stylesheet" type="text/css" href="style/style.css">
 
 <body>
     <div class="main_wrapper">
         <header>
             <div id="main_title">
-                <p>
-                    <img id="logo" src="style/images/zozor_logo.png" alt="logo">
+                <p><img id="logo" src="style/images/zozor_logo.png" alt="logo">
                     <h1> Zozor </h1>
-                    <h4>Travel Diaries</h4>
-                </p>
+                    <h4>Travel Diaries</h4></p>
             </div>
             <nav>
                 <ul>
@@ -35,6 +34,8 @@
             </div>
         </div>
         <section>
+            <p>
+                <h4>About</h4></p>
             <article>
                 <h3> <img src="style/images/pin.png" alt="Travel category" class="ico_categorie" />The Great Traveller</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -58,10 +59,10 @@
             </div>
             <div id="pics">
                 <h3>My Pictures</h3>
-                <img src="style/images/pic1.jpg">
-                <img src="style/images/pic2.jpg">
-                <img src="style/images/pic3.jpg">
-                <img src="style/images/pic4.jpg">
+                <img src="style/images/pic1.jpg" alt="">
+                <img src="style/images/pic2.jpg" alt="">
+                <img src="style/images/pic3.jpg" alt="">
+                <img src="style/images/pic4.jpg" alt="">
             </div>
             <div id="friends">
                 <h3>My Friends</h3>
