did forms and tables

--- a/openclass-exs/index.html
+++ b/openclass-exs/index.html
@@ -10,13 +10,33 @@
 <body>
     <header>
         <p><a href="img/dsc.jpg" title="picture of me looking up at you"><h1 class="heading"><strong> Ndundu J</strong></h1></a></p>
-        
-        <p class="tagline"><em>Women and cats will do as they please, and men and dogs should relax and get used to the idea</em> <br />
-        <img src="img/dsc_tn.jpg" alt="tree thumbnail" class="mypic" title="look at me thumbnail">
+        <p class="tagline"><em>Women and cats will do as they please, and men and dogs should relax and get used to the idea</em>
+            <br />
         </p>
     </header>
-    <section>
-        <article class="article-one" id="one">
+    <section id="aside">
+        <aside>
+            <img src="img/dsc_tn.jpg" alt="tree thumbnail" class="mypic" title="look at me thumbnail">
+            <nav>
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Expereince</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#">Awards</a>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
+    </section>
+    <section id="rightsec">
+        <article class="article-one" id="asone">
             <p>
                 <h3><strong>My experience</strong></h3>
                 <ul>
@@ -26,7 +46,7 @@
                 </ul>
             </p>
         </article>
-        <article class="article-one" id="two">
+        <article class="article-one" id="astwo">
             <p>
                 <h3><strong>My skills</strong></h3>
                 <ul>
@@ -37,7 +57,7 @@
                 </ul>
             </p>
         </article>
-        <article class="article-one" id="three">
+        <article class="article-one" id="asthree">
             <p>
                 <h3><strong>My education</strong></h3>
                 <p>Attended the finest private schools <strong><i> Code Academy, OpenClasses</i></strong> and others...</p>
