finished openclassrooms course
completed three webpages for CV and Zozor and projects

--- a/openclass-exs/index.html
+++ b/openclass-exs/index.html
@@ -14,7 +14,7 @@
             <br />
         </p>
     </header>
-    <section id="aside">
+    <section>
         <aside>
             <img src="img/dsc_tn.jpg" alt="tree thumbnail" class="mypic" title="look at me thumbnail">
             <nav>
