added wangari and folio

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <header>
-            <p>
-                <h1 class="text-xs-center">Projects</h1></p>
-        </header>
+    <header>
+        <p>
+            <h1 class="text-xs-center">Projects</h1></p>
+    </header>
+    <div class="container">
         <div class="row">
             <!--div id="projects"-->
             <div id="divone" class="col-md-2 projdiv">
@@ -34,13 +34,25 @@
             </div>
             <div id="divfour" class="col-md-2 projdiv">
                 <h3>Create</h3>
-                <p> <a href="#">See it</a> </p>
+                <p> <a href="../Create">See it</a> </p>
             </div>
             <div id="divfive" class="col-md-4 projdiv">
                 <h3>GBWorld</h3>
                 <p> <a href="GBWorld">See it</a> </p>
             </div>
             <!--/div projects-->
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div id="divsix" class="col-md-6 projdiv">
+                <h3>Portfolio</h3>
+                <p> <a href="../minty">See it</a> </p>
+            </div>
+            <div id="divsev" class="col-md-6 projdiv">
+                <h3>Wangari</h3>
+                <p> <a href="../wangari">See it</a> </p>
+            </div>
         </div>
     </div>
     <!-- jQuery -->
